# Ceagle-Term

./: .gitignore  CMakeLists.txt  README.md
cmake/: CodeCoverage.cmake
evaluation/: analyze.cpp  aprove.csv  ceagle.csv  ctrl.csv  kittel.csv
include/: ARG.h  Abstractor.h  Analysis.h  QueueWaitList.h  VectorWaitList.h  WaitList.h  debug.h  macros.h
include/hashlib++/: hashlibpp.h
include/test/: support.h
lib/llvm-slicer/: README.md
lib/llvm-slicer/include/: Callgraph.h  FunctionStaticSlicer.h  LLVMSupport.h  Matcher.h  Modifies.h  PointsTo.h  PostDominanceFrontier.h  RuleExpressions.h  SourceLineMapping.h  StaticSlicer.h  VariableSlicer.h
lib/llvm-slicer/lib/: Makefile
lib/llvm-slicer/lib/Matcher/: Matcher.cpp
lib/llvm-slicer/lib/Modifies/: ModStats.cpp  Modifies.cpp
lib/llvm-slicer/lib/PointsTo/: PointsTo.cpp  RuleExpressions.cpp
lib/llvm-slicer/lib/Slicing/: FunctionStaticSlicer.cpp  Prepare.cpp  SourceLineMapping.cpp  StaticSlicer.cpp  VariableSlicer.cpp
lib/llvm-slicer/test/: example1.c  example2..objdump  example2.c
log/: 20160426 floats-analysis.txt  20160428 floats-analysis-2.txt  20160501 floats-analysis-3.txt  20160505 floats-analysis-4.txt  20160505-absref-floats-analysis.txt  20160924 structural-abstraction-memo.txt  20161103 sv-update.txt
log/20160828 function-call-log/sv/ldv-challenges/: linux-3.10-rc1-43_1a-bitvector-drivers--net--ethernet--broadcom--b44.ko--ldv_main0_true-unreach-call.cil.out.c.txt  linux-3.8-rc1-32_7a-drivers--md--md-mod.ko-ldv_main0_sequence_infinite_withcheck_stateful_true-unreach-call.cil.out.c.txt  linux-3.8-rc1-32_7a-drivers--media--dvb-frontends--stv090x.ko-ldv_main0_sequence_infinite_withcheck_stateful_true-unreach-call.cil.out.c.txt  linux-3.8-rc1-32_7a-drivers--net--ethernet--broadcom--bnx2x--bnx2x.ko-ldv_main0_sequence_infinite_withcheck_stateful_true-unreach-call.cil.out.c.txt  linux-3.8-rc1-32_7a-drivers--net--ethernet--broadcom--bnx2x--bnx2x.ko-ldv_main3_sequence_infinite_withcheck_stateful_false-unreach-call.cil.out.c.txt  linux-3.8-rc1-32_7a-drivers--net--ethernet--broadcom--tg3.ko-ldv_main0_sequence_infinite_withcheck_stateful_true-unreach-call.cil.out.c.txt  (+9 more)
scripts/: 20161122_result.csv  20161201.nohup.out  20161201_dd_all.csv  20161201_dd_all_witness_result.csv  20161208.nohup.out  20161208_dd_all.csv  20161208_dd_all_witness_result.csv  20161208_dd_all_witness_result.csv.bak  20161208_dd_incremental.csv  20161208_dd_incremental_witness_result.csv  README.txt  dexi-count.sh  dexi-downloads.sh  dexi-generate-function-call.sh  dexi-html.sh  dexi-p8.sh  dexi-sv2017.sh  dexi-update-sv.sh  nohup.out  witness_statistics.sh
scripts/deprecated/: cp-sv.sh  executebench.sh
src/: Config.h.in  Makefile_ceagle  example.c  main.cpp  main_ceagle.cpp
src/CDE/: CDE.h  CDE4ECA.cpp  CDE4Elevator.cpp
src/Context/: Context.h  ContextArraysBounds.cpp  ContextArraysBounds.h  ContextArraysLargeLoop.cpp  ContextArraysLargeLoop.h  ContextByteOperation.cpp  ContextByteOperation.h  ContextConcurrency.cpp  ContextConcurrency.h  ContextDeviceDriversLinux64.cpp  ContextDeviceDriversLinux64.h  ContextECA.cpp  ContextECA.h  ContextElevator.cpp  ContextElevator.h  ContextFloat.cpp  ContextFloat.h  ContextFloatsArray.cpp  ContextFloatsArray.h  ContextGCD.cpp  ContextGCD.h  ContextLdvMalloc.cpp  ContextLdvMalloc.h  ContextLoop.cpp  ContextLoop.h  ContextManager.cpp  ContextManager.h  ContextModuleAnalysis.cpp  ContextModuleAnalysis.h  ContextNewton.cpp  ContextNewton.h  ContextNoNondet.cpp  ContextNoNondet.h
src/DFS/: CEGAR.cpp  CEGAR.h  DFS.cpp  DFS.h  GenericDFS.cpp  GenericDFS.h  IRBlockDFS.cpp  IRBlockDFS.h
src/DFS/Absref/: AbstractReachedSet.cpp  AbstractReachedSet.h  AbstractState.cpp  AbstractState.h  AbstractStateWaitList.cpp  AbstractStateWaitList.h  Precision.h  PredicateAbstractor.cpp  PredicateAbstractor.h
src/DFS/Advisor/: AbsrefAdvisor.cpp  AbsrefAdvisor.h  Advisor.cpp  Advisor.h  ArraysBoundsAdvisor.cpp  ArraysBoundsAdvisor.h  NaiveAdvisor.cpp  NaiveAdvisor.h  SimpleAdvisor.cpp  SimpleAdvisor.h  TestAdvisor.cpp  TestAdvisor.h
src/Overflow/: overflow.cpp  overflow.h
src/Preprocess/: CeagleInterfacePreprocessor.cpp  CeagleInterfacePreprocessor.h  GenerateFunctionCallPreprocessor.cpp  GenerateFunctionCallPreprocessor.h  InlinePreprocessor.cpp  InlinePreprocessor.h  NamingPreprocessor.cpp  NamingPreprocessor.h  PhiPreprocessor.h  Preprocessor.h  SVCompInterfacePreprocessor.cpp  SVCompInterfacePreprocessor.h  SlicingFunctionPreprocessor.cpp  SlicingFunctionPreprocessor.h  TrimPreprocessor.cpp  TrimPreprocessor.h
src/Property/: PropertyManager.cpp  PropertyManager.h
src/Runner/: Runner.h  RunnerArraysLargeLoop.cpp  RunnerArraysLargeLoop.h  RunnerManager.cpp  RunnerManager.h  RunnerNoNondet.cpp  RunnerNoNondet.h
src/SMT/Middleware/: AST.cpp  AST.h  Model.cpp  Model.h  Solver.cpp  Solver.h  Sort.cpp  Sort.h  Z3RawSolver.cpp  Z3RawSolver.h  popen.cpp  popen.h
src/SMT/Translator/: IRPathAbsrefTranslator.cpp  IRPathAbsrefTranslator.h  IRPathTranslator.cpp  IRPathTranslator.h  InstTranslator.cpp  InstTranslator.h  Translator.h
src/StructuralAbstraction/: ASTManager.cpp  ASTManager.h  MSG.cpp  MSG.h  MSGManager.cpp  MSGManager.h  SAManager.cpp  SAManager.h  VCGenerator.cpp  VCGenerator.h
src/Termination/: BasicTypes.cpp  BasicTypes.h  SEGManager.cpp  SEGManager.h  SEGState.cpp  SEGState.h  StackFrame.h  Utils.cpp  Utils.h
src/Util/: IRUtil.cpp  IRUtil.h  StringUtil.cpp  StringUtil.h
src/ValueAnalysis/: ValueAnalysis.cpp  ValueAnalysis.h
src/Witness/: CorrectnessWitness.cpp  CorrectnessWitness.h  ViolationWitness.cpp  ViolationWitness.h  Witness.h
test/DFS/Absref/: test_abstract_state.cpp  test_abstractor.cpp  test_cegar.cpp
test/Overflow/: test_overflow.cpp
test/SMT/Middleware/: test_ast.cpp  test_interp.cpp  test_solver.cpp
test/SMT/Translator/: test_inst_translator.cpp  test_translator.cpp
test/StructuralAbstraction/: test_msg_manager.cpp
test/ValueAnalysis/: test_value_analysis.cpp
(+1235 files in other folders)
